[package]
name = "mta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.0"
rand = "0.8.4"
num-traits = "0.2.18"
rsa = "0.6"
curv-kzen = "0.9"
paillier = "0.1.7"
zk-paillier = "0.4.2"
serde = "0.4.0"
sha2 = "0.10.0"