[package]
name = "mta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = "0.13.3"
secp256k1 = "0.28.2"
num = "0.4.1"
serde = "1.0"
sha2 = "0.10.8"
bit-vec = "0.5"
rayon = "1.0"
serde_derive = "1.0"
libpaillier = "0.6.0"
generic-array = "0.4.0"
num-bigint = {version = "0.2.6", features = ["rand"]}
num-integer = "0.1.44"
num-primes = "0.1.2"
num-traits = "0.2.14"
num-bigint-dig = "0.8.2"
rand = "0.5.6"
curv-kzen = "0.10,0"



